...
    var accountNameTextField: UITextField = createTextField_Top(textSize: 16, tag: 0, placeholder: "Bank Account Name", identifier: "Edit Bank Account Name")
    
    var accountTypeTextField: UITextField = createTextField_Bottom(textSize: 16, tag: 0, placeholder: "Account Type", identifier: "Edit Account Name")
    
    var actionButton: BlackButton = createBlackButton(identifier: "Edit Account")
    
    var cancelButton: UIButton = createBlueButton(textSize: 14, text: "Cancel", identifier: "Cancel")
    
    // MARK: Override Functions
    
    override func viewDidLoad() {
        
        os_log(.info, log: self.app, "Loaded")
...
